Fix importance plot, delete table of first three and last three rows

--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -34,8 +34,7 @@ output:
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, cache=FALSE, messages=FALSE, warning=FALSE)
-knitr::opts_chunk$set(fig.width = 10, fig.height = 10, fig.alig = "center")
+knitr::opts_chunk$set(echo = FALSE, cache=FALSE, message=FALSE, warning=FALSE)
 # Make sure you have the latest versions of rmarkdown and bookdown installed
 library(ggplot2)
 library(tidyverse)
@@ -73,9 +72,11 @@ world_map <-ne_countries(returnclass = "sf")
 \text{Hapiness score} = & \text{ GDP per Capita } + \text{ Family } + \text{ Life expectancy }+ \text{ Freedom } +   \\ 
 &  \text{ Government Corruption } + \text{ Generosity } + \text{Dystopia Residual }
 \end{align*}
-  The **table \@ref(tab:model2015)** is shown that there is strong evidence that the happiness score is and only is a simple average of these factors. In addition, all the R squared are close to 1 from 2015 to 2017 in the **Table \@ref(tab:Rsquared)** ,indicating that these factors are stanardized and no longer to use as building up a model. Besides, for 2018 and 2019 data, the organization provides another set of variables such as social support has been changed from family factor, which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
+  The **Table \@ref(tab:model2015)** is shown that there is strong evidence that the happiness score is and only is a simple average of these factors. In addition, all the R squared are close to 1 from 2015 to 2017 in the **Table \@ref(tab:Rsquared)** ,indicating that these factors are stanardized and no longer to use as building up a model. Besides, for 2018 and 2019 data, the organization provides another set of variables such as social support has been changed from family factor, which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
   
-  Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by different countries.There are another three datasets such as GDP, CPI and population data which are downloaded from The World Bank. And area of each country is computed using the simple feature polygons with the package `rnaturalearth` (@rnaturalearth). We select all the happiness scores between 2015-2019 to construct a new table for happiness score with new factors, therefore **Table \@ref(tab:table-FT)** and **Table \@ref(tab:table-LT)** can be displayed the first three data and the last three data about happiness scores in different years. In addition, we pick up thee variables such as gdp,cpi and population between 2015-2019 to put them into new happiness score dataset. After matching the area of each country and drop out the missing value, the new dataset with happiness score for analyzing the relative variable improtance is established in the **Table \@ref(tab:tableHS)**.
+  Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by different countries. There are another three datasets such as GDP, CPI and population data which are downloaded from The World Bank. And area of each country is computed using the simple feature polygons with the package `rnaturalearth` [@rnaturalearth]. In addition, we pick up thee variables such as gdp,cpi and population between 2015-2019 to put them into new happiness score dataset. After matching the area of each country and drop out the missing value, the new dataset with happiness score for analyzing the relative variable improtance is established in the **Table \@ref(tab:tableHS)**.
+  
+  
 ```{r lmmodel}
 model2015 <- lm(as.formula(paste('`', 
                             colnames(data2015)[4], "`~`",
@@ -118,7 +119,7 @@ names(x)[1] <- "2015"
 names(x)[2] <- "2016"
 names(x)[3] <- "2017"
 x%>%kable(caption = ' R Squared in 2015-2017') %>%
-  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE)
 ```
 
 ```{r clean-data}
@@ -143,17 +144,8 @@ data2019 %>%
   rbind(temp) -> temp
 ```
 
-```{r table-FT,fig.cap="Selecting all happiness scores in different years"}
+```{r}
 happy_score<- temp
-#s<-data.frame(head(happy_score,3),tail(happy_score,3))
-
-head(happy_score,3)%>%kable(caption = "The first three data in happyiness scores")%>%
-  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
-```
-
-```{r table-LT,fig.cap="Selecting all happiness scores in different years"}
-tail(happy_score,3)%>%kable(caption = "The last three data in happyiness scores") %>%
-  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
 ```
 
 
@@ -187,7 +179,7 @@ as_tibble(world_map) %>%
 ```{r tableHS,fig.cap="construct a new dataset for analysing happiness score"}
 happy_score<-happy_score%>% drop_na()
 head(happy_score)%>%kable(caption = 'A clean dataset with Happiness Score')%>%
-  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE)
 ```
 
 \clearpage
@@ -196,32 +188,37 @@ head(happy_score)%>%kable(caption = 'A clean dataset with Happiness Score')%>%
 
 ## Variable importance
 
-  For comparing the relative importance with each predictors, the **lmg** approach with package `relaipmo` (@relaimpo) is used for evaluating the variable importance in modelling happiness score. By using **lmg** approach to  calculate the relative contribution of each predictor to the R squared with the consideration of the sequence of predictors appearing in the model. 
+  For comparing the relative importance with each predictors, the **lmg** approach with package `relaipmo` [@relaimpo] is used for evaluating the variable importance in modelling happiness score. By using **lmg** approach to  calculate the relative contribution of each predictor to the R squared with the consideration of the sequence of predictors appearing in the model. 
   
   Firstly, we built up a **LM** model for the new happiness score dataset. By eliminating the heteroscedasticity in the residual and interpreting the percentage marginal effect of each variable, using logarithmic method for setting up a linear regression model is an appropriate way. Therefore, a **LM** model is shown :
 \begin{align*}
-\text{log(Happiness Score)} = & \text{ log(CPI)} +  \text{ log(GDP)}+\text{ log(Area)}+ \\
-& \text{ log(Population)} 
+\text{log(Happiness Score)} = & \text{ CPI} +  \text{ log(GDP)}+\text{ log(Area)}+ \text{ log(Population)} 
 \end{align*}
 
-  From**Figure \@ref(fig:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors is around 72.88%. For the four predictors, GDP with the higest value in four predictors contributed to around 65% for the happiness scores,indicating that GDP factor is the most important for hanppiness score and it is more likely to affect the change of happiness scores when the GDP variable change(@gromping2015variable). On the other hand,by using **variance inflation factor** (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population variabble is the highest one around at 3, indicating that there is a slight correlation of population with other variables in the model(@daoud2017multicollinearity).
+  From **Figure \@ref(fig:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors is around 72.88%. For the four predictors, GDP with the higest value in four predictors contributed to around 65% for the happiness scores,indicating that GDP factor is the most important for hanppiness score and it is more likely to affect the change of happiness scores when the GDP variable change [@gromping2015variable]. On the other hand,by using **variance inflation factor** (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population variabble is the highest one around at 3, indicating that there is a slight correlation of population with other variables in the model [@daoud2017multicollinearity].
 
 ## Scatter matrix
   To analyze the relatinship between different perdictors, we use scatter matrix which can be visualized easily how much one variable is affected by another or the relationship between them. The **Figure \@ref(fig:scattermatrix)** compares all the predictors in the model and represents the relationship between these variables. If there is a strong positive linear correlation between two factors, we can say that if one factor is important in evaluating a country’s overall happiness, it is likely that the other factor is important as well. Based on the plots, it seems that the importances of GDP and area are strongly correlated, as well as population and area. Therfore,GDP is the most important factors for evaluating the happiness scores as it has the higest positive correlation with happiness score,but also for the developed countries in most of western area with higest GDP, the happiness scores will be higher than the development countries with lower GDP.
   
-  In conclusion, GDP is the most influential factors for assessing the happiness scores but the area vriable represents a higher correlation with GDP. Thus, Even in very poor countries, GDP comparisons seem to influence the happiness score mostly; however, it may look more likely to happen in rich-country phenomenon((@clark2011will).
+  In conclusion, GDP is the most influential factors for assessing the happiness scores but the area vriable represents a higher correlation with GDP. Thus, Even in very poor countries, GDP comparisons seem to influence the happiness score mostly; however, it may look more likely to happen in rich-country phenomenon [@clark2011will].
   
 
 ```{r variable-important,fig.cap="Variable importance in happiness score"}
 
-model <- lm(log(`Happiness Score`)~log(area)+log(cpi)+log(gdp)+log(population), data=happy_score)
+model <- lm(log(`Happiness Score`)~log(area)+cpi+log(gdp)+log(population), data=happy_score)
   
   relImportance<-model%>%relaimpo::calc.relimp(type="lmg",rela=TRUE)
   #tibble('R^2' =relImportance$R2*100 , 'log(gpd)' = relImportance$lmg[3]*100,'log(population)' = relImportance$lmg[4]*100,'log(cpi)' = relImportance$lmg[2]*100,'log(area)' = relImportance$lmg[1]*100)%>%
   #pivot_longer(cols = c('R^2', 'log(gpd)','log(population)','log(cpi)','log(area)'), names_to = "Relative importance",values_to = "Important(%)") %>%
   #kable(caption = 'Variable importance in happiness score') %>%
   #kable_styling(bootstrap_options = c("striped", "hover"), full_width = FALSE, position = "left")
-  plot.relimplm(relImportance)
+  
+  data.frame(name = c('log(area)', 'cpi', 'log(gdp)', 'log(population)'), lmg = relImportance@lmg) %>%
+    ggplot()+
+    geom_bar(aes(name,lmg), stat = "identity") +
+    ylab('% of R^2') +
+    xlab(paste0('R^2 = ', round(relImportance@R2, digits = 4), ', metrics are normalized to sum 100%')) +
+    ggtitle("Relative importances for log(Happiness Score)\nMethod LMG")
 ```
 
 ```{r mulitilinearity,fig.cap="VIF procedures in each predictors"}
@@ -233,10 +230,12 @@ as.table(car::vif(model))%>%
 
 \clearpage
 
-```{r scattermatrix,fig.cap="Happiness Score Scatter Matrix"}
+```{r scattermatrix,fig.cap="Happiness Score Scatter Matrix", fig.width = 10, fig.height = 10}
 ggpairs(data=happy_score[,-c(2,3)],
          main="Happiness Score Scatter Matrix")
 ```
+
+\clearpage
 
 # Q4. What is the relationship between predictors and happiness score in linear regression analysis?
 
@@ -249,46 +248,6 @@ h18$`Perceptions of corruption` = as.numeric(h18$`Perceptions of corruption`)
 h19 = read_csv("Data/2019.csv")
 ```
 
-<!--
-
-```{r}
-mod15 = lm(as.formula(paste('`', 
-                            colnames(h15)[4], "`~`",
-                            paste(colnames(h15)[c(6, 7, 8, 9, 10, 11, 12)], collapse = "`+`"),
-                                                        '`',
-        sep = ""
-    )), data = h15)
-```
-
-```{r mod2015}
-c_table = summary(mod15)
-
-rownames(c_table$coefficients) = c_table$coefficients %>%
-  rownames() %>%
-  stringr::str_remove_all('`')
-
-c_table$coefficients %>%
-  knitr::kable('latex', 
-               digits = 4, 
-               booktabs = TRUE,
-               caption = "Linear regression model for happiness scores in 2015. The $R^2$ of this model is 1. In the dataset, these factors are standardized.") %>%
-  kableExtra::kable_styling(latex_options = "striped")
-```
-
-To explore the relationship between hapiness score and factors including economy, family, health, freedom, trust and generosity, a linear regression model for the 2015 data was developed. Results of this model is shown in Table \ref{tab:mod2015}. From the result, we can conclude the estimated closed form of hapiness score:
-
-\begin{align*}
-\text{Hapiness score} = & \text{ GDP per Capita } + \text{ Family } + \text{ Life expectancy }+ \text{ Freedom } +   \\ 
-&  \text{ Government Corruption } + \text{ Generosity } + \text{Dystopia Residual }
-\end{align*}
-
-There is strong evidence that the happiness score is and only is a simple average of these factors. Therefore, the relationship between happiness score and these factors is no longer interesting to us.
-
-This situation also happens in 2016 and 2017 data. Besides, for 2018 and 2019 data, the organization provides another set of variables which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
-
-Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by country. GDP, CPI and population data is downloaded from The World Bank. And area of each country is computed using the simple feature polygons provided in package `rnaturalearth`.
-
--->
 
 ```{r message=FALSE, warning=FALSE}
 library(rnaturalearth)
@@ -384,7 +343,7 @@ lm_sum$coefficients %>%
   kableExtra::kable_styling(latex_options = "striped")
 ```
 
-We use variables mentioned in Q3 as predictors, the regression result is shown in Table \ref{tab:lmcoeff}. According to the result, we can write down the formula for this model:
+We use variables mentioned in Q3 as predictors, the regression result is shown in **Table** \ref{tab:lmcoeff}. According to the result, we can write down the formula for this model:
 
 \begin{align*}
 \text{log(Happiness Score)} = & \ 0.3208 + 0.0005\text{ CPI} + 0.1285 \text{ log(GDP)} \\
@@ -406,13 +365,15 @@ log(x_0 + \Delta x) - log(x_0) &\approx log(x_0) + log'(x_0)\Delta x - log(x_0)\
 &= 0.1285\nonumber
 \end{align}
 
-Now we can interpret the result from Table \ref{tab:lmcoeff}. Only variables that are statistically significant will be reported. Roughly, a 1% increase in GDP leads to a 0.1285% rise in the happiness score, and a 1% increase in population leads to a 0.1218% fall in the happiness score.
+Now we can interpret the result from **Table** \ref{tab:lmcoeff}. Only variables that are statistically significant will be reported. Roughly, a 1% increase in GDP leads to a 0.1285% rise in the happiness score, and a 1% increase in population leads to a 0.1218% fall in the happiness score.
 
 ```{r}
 world_map$not_included = is.na(sapply(world_map$name, match, table = hs$name))
 ```
 
-```{r namap, fig.cap="The world map of missing countries in our dataset"}
+
+
+```{r missmap, fig.cap="The world map of missing countries in our dataset"}
 ggplot()+
   geom_sf(data = world_map, aes(fill = not_included))+
   ggtitle("World map of countries that are not included in our dataset") +
@@ -420,11 +381,15 @@ ggplot()+
   theme(legend.position = 'bottom') +
   labs(fill = "Not included")
 ```
-Apparently, the happiness score can be affected by other factors that correlated with regressors and doesn't include in our model, such as the education index and the social welfare system. It means an endogeneity issue occurs in our model, which leads our estimator to be bias and inconsistent. We can either include other variables that we think will be useful for happiness score prediction, or find instrumental variable and fit a Two-Stage least squares regression. Besides, another issue with our model is the sample selection problem. There are only 126 countries with completed cases in our final dataset, which means 69 countries are not considered. Figure \ref{fig:namap} shows the map of missing countries. According to the map, most of the countries being omitted are developing countries. It indicates that our samples are not randomly selected from the population, and we are facing an observability issue. It can be expected that the happiness scores in those countries are lower than the average, which suggests we potentially underestimate our coefficients in OLS. 
 
-The diagnostics of our regression is shown in Figure \ref{fig:dig}. From the Residuals vs Fitted plot, we can see the non-constant variance across the fitted value. The model can be adjusted using Heteroskedasticity and Autocorrelation Consistent (HAC) covariance matrix estimation to let our inference to be credible. The QQ plot suggests the density of residuals is asymmetric, but it is very close to a normal distribution. In the Cooks distances vs Fitted plot, we use 4/(n-k-1) as the threshold. The most influential points are from Suriname, Angola, Botswana, Sudan, Gabon, Sierra Leone, Togo and Burundi. Figure \ref{fig:ip} shows the pattern of these countries. Most of them are in Africa, which contains extreme values in either happiness scores, GDP, CPI or area. It tells us that Africa is different from other places in the world, and we can consider putting a dummy variable in our model to indicate whether the country is in Africa.
 
-In conclusion, this model does a solid job in explaining the relationship between happiness score and our regressors if our point of interest is countries outside Africa. 
+
+
+Apparently, the happiness score can be affected by other factors that correlated with regressors and doesn't include in our model, such as the education index and the social welfare system. It means an endogeneity issue occurs in our model, which leads our estimator to be bias and inconsistent. We can either include other variables that we think will be useful for happiness score prediction, or find instrumental variable and fit a Two-Stage least squares regression. Besides, another issue with our model is the sample selection problem. There are only 126 countries with completed cases in our final dataset, which means 69 countries are not considered. **Figure** \ref{fig:missmap} shows the map of missing countries. According to the map, most of the countries being omitted are developing countries. It indicates that our samples are not randomly selected from the population, and we are facing an observability issue. It can be expected that the happiness scores in those countries are lower than the average, which suggests we potentially underestimate our coefficients in OLS. 
+
+The diagnostics of our regression is shown in **Figure** \ref{fig:dig}. From the Residuals vs Fitted plot, we can see the non-constant variance across the fitted value. The model can be adjusted using Heteroskedasticity and Autocorrelation Consistent (HAC) covariance matrix estimation to let our inference to be credible. The QQ plot suggests the density of residuals is asymmetric, but it is very close to a normal distribution. In the Cooks distances vs Fitted plot, we use 4/(n-k-1) as the threshold. The most influential points are from Suriname, Angola, Botswana, Sudan, Gabon, Sierra Leone, Togo and Burundi. **Figure** \ref{fig:ip} shows the pattern of these countries. Most of them are in Africa, which contains extreme values in either happiness scores, GDP, CPI or area. It tells us that Africa is different from other places in the world, and we can consider putting a dummy variable in our model to indicate whether the country is in Africa.
+
+In conclusion, this model does a solid job in explaining the relationship between happiness score and our regressors. 
 
 
 
@@ -481,4 +446,4 @@ p5 = ggplot(mod_detail) +
 grid.arrange(p1, arrangeGrob(p2, p3, p4,p5, ncol=2), top = "Diagnostics for influential data points\n Top: World map of countries with influential data points. \n Bottom: Scatter plots of fitted value against each regressor. Red dots represent the infulential data points.", ncol=1, heights =c(2,1))
 ```
 
-
+\clearpage
