--- a/references.bib
+++ b/references.bib
@@ -2,6 +2,7 @@
   title={World Happiness Report 2019. New York: Sustainable Development Solutions Network},
   author={Helliwell, John F and Layard, Richard and Sachs, Jeffrey D},
   year={2019}
+}
 
 @article{clark2011will,
   title={Will GDP growth increase happiness in developing countries?},
@@ -61,4 +62,19 @@
   number={1},
   pages={3--73},
   year={1990},
+}
+
+@book{fox2019regression,
+  title={Regression diagnostics: An introduction},
+  author={Fox, John},
+  volume={79},
+  year={2019},
+  publisher={SAGE Publications, Incorporated}
+}
+
+@misc{newey1986simple,
+  title={A simple, positive semi-definite, heteroskedasticity and autocorrelationconsistent covariance matrix},
+  author={Newey, Whitney K and West, Kenneth D},
+  year={1986},
+  publisher={National Bureau of Economic Research Cambridge, Mass., USA}
 }
